# amperedata-streamlit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  env.template  load_nasa_data.py  pyproject.toml  requirements.txt  start_streamlit.sh  streamlit_app.py
.github/workflows/: ci.yml
backend/: __init__.py
backend/etl/: __init__.py  core.py  exceptions.py  models.py  tasks.py  transformers.py  validators.py
backend/ml/: feature_engineering.py  training.py
backend/ml/models/: base_model.py  xgboost_model.py
backend/ml/saved_models/: feature_names.txt  feature_scaler.joblib  pipeline_metadata.joblib  rul_model_xgboost.joblib
backend/parsers/: __init__.py  biologic.py  generic_csv.py  neware.py
docker/: init-timescale.sql  postgresql.conf
frontend/dashboard/: __init__.py  builder.py  embedding.py  exceptions.py  models.py  permissions.py  storage.py  templates.py  widgets.py
frontend/electrochemical/: __init__.py  exceptions.py  models.py  processors.py  visualizations.py
frontend/visualization/: __init__.py  components.py  config.py  exceptions.py  models.py  streamlit_app.py  templates.py  utils.py
pages/: 1_Upload_Data.py  2_Visualizations.py  3_Data_Explorer.py  4_Settings.py  5_Advanced_Charts.py  6_Build_Sheet.py  7_Live_Dashboard.py
shared/: __init__.py
shared/config/: __init__.py  settings.py
shared/logging/: __init__.py  config.py  middleware.py
shared/utils/: __init__.py
tests/: __init__.py
tests/integration/: test_dashboard_integration.py  test_electrochemical_integration.py  test_visualization_integration.py
tests/unit/: __init__.py  conftest.py  test_dashboard_core.py  test_electrochemical_core.py  test_visualization_core.py
utils/: advanced_charts.py  auth.py  column_mapper.py  export_manager.py
